--- a/index.html
+++ b/index.html
@@ -8,8 +8,34 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/png" href="ChipGames_favicon.png" />
+    <link rel="apple-touch-icon" href="ChipGames_favicon-180x180.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="ChipGames_favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="ChipGames_favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="ChipGames_favicon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="ChipGames_favicon-512x512.png"
+    />
+    <link rel="manifest" href="manifest.json" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
@@ -31,7 +57,7 @@
       name="keywords"
       content="색상정렬, 퍼즐게임, 워터소트, 무료게임, ChipGemSort"
     />
-    <meta property="og:title" content="ChipGemSort - 색상 정렬 퍼즐" />
+    <meta property="og:title" content="ChipGemSort - CHIP GAMES" />
     <meta
       property="og:description"
       content="젬을 병에 나눠 담아 한 병에 한 색만!"
